# GlTask4

./: .gitignore  CMakeLists.txt  NetworkInterface.cpp  NetworkInterface.h  README.md  filepacketlogger.cpp  filepacketlogger.h  main.cpp  snifferlib.cpp  snifferlib.h
include/: MainInterface.h  packetlogger.h  snifferlib.h
src/: MainInterface.cpp  main.cpp  packetlogger.cpp  snifferlib.cpp
